2004-02-03  Michael Yount <csf@moscow.com>

	* convertdb.pl:  Remove parentheses in "grep" arguments.
	Thanks to SRE.

	* bin/mj_queueserv:  (in, out) Validate file handle.
	Thanks to SRE.

	* lib/Majordomo.pm:  (_make_list)  Add valid_list
	callback.

	* lib/Mj/Access.pm:  (_d_post)  Add anchors to restrict_post
	tests.

	* lib/Mj/Config.pm:  (parse_restrict_post)  Validate
	the list names.
	(_compile_rule)  Bugfix:  Separate right parens from
	comparisons.  Thanks to SRE.

	* lib/Mj/Util.pm:  (shell_hook)  Do not use ".." in
	scripts directory name in consideration of symlinks.  
	Thanks to SRE.

	* setup/install_util.pl:  (copy_file, rcopy)  Unlink
	the destination before copying.  Thanks to SRE.

2004-01-27  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_keyed)  Bugfix:  Count
	array elements before splicing them.
	Thanks to Brock Rozen.

2004-01-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (list_access_check)  Bugfix:  Arrange 
	to delete the spool file for a posted message if the only
	terminal action is "forward".

	* lib/Mj/Resend.pm:  (post)  Delete any temporary files
	(In particular, the spool file if a message was forwarded.)

2004-01-20  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (post, _post, _check_approval, do_digests)  
        Bugfix:  Record the correct interface in the log.
	Thanks to Brock Rozen.

2004-01-19  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (check_headers)  Bugfix:
	Add missing Safe compartment operations for perl 5.8.
	Thanks to Brock Rozen.

2004-01-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Parser.pm:  (parse_part)  Bugfix:  fix typo
	that prevented results from being mailed to a 3d party.
	Thanks to Dean Collins.

2004-01-14  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Add support for the "default list" command.

2004-01-13  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200401130.
	(get_all_lists, help_start)  Set the "nostall" access