@@ -1,3 +1,8 @@
+2004-02-04  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  (connect)  Initialize variables
+	sooner to avoid warnings.  Thanks to Brock Rozen.
+
 2004-02-03  Michael Yount <csf@moscow.com>
 
 	* convertdb.pl:  Remove parentheses in "grep" arguments.
